[Chore] 커뮤니티 카테고리 목록 조회 정렬 수정 (#602)
* [Chore]: toList() 메소드 사용으로 수정

* [Chore]: id값 기준으로 솝티클 카테고리가 맨 앞으로 오도록 수정